--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "description": "A Node-RED Project",
     "version": "0.0.1",
     "dependencies": {
-        "node-red-contrib-git-nodes": "~0.1.6"
+        "node-red-contrib-git-nodes": "~0.1.6",
+        "node-red-contrib-increment": "0.0.6"
     }
 }
